--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
                     </div>
                     <h3>Image Cropper</h3>
                     <p>Crop images to remove unwanted areas or focus on specific parts precisely</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="image-crop.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
