--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
                     </div>
                     <h3>Image to Text (OCR)</h3>
                     <p>Extract text from images with advanced optical character recognition</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="text-extract.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
