--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
                     </div>
                     <h3>Image Rotator/Flipper</h3>
                     <p>Rotate or flip images horizontally/vertically with one click</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="image-rotate.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
