--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
                     </div>
                     <h3>PDF to Word / Word to PDF</h3>
                     <p>Convert between PDF and Word documents seamlessly while preserving formatting</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="pdf-convert.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
