--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
                     </div>
                     <h3>PDF Compressor</h3>
                     <p>Reduce PDF file size while maintaining quality and document integrity</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="pdf-compress.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
