--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
                     </div>
                     <h3>PDF Merger & Splitter</h3>
                     <p>Combine multiple PDFs or split pages from a PDF with precision</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="https://www.profitableratecpm.com/rdbz17vi?key=cbf7469abc290f946b5a80bbd7705bcb" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
