--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
                     </div>
                     <h3>Document Converter</h3>
                     <p>Convert between various document formats including DOCX, PPTX, TXT and more</p>
-                    <a href="https://www.profitableratecpm.com/whb7qw4v?key=9f5bad251a7afd3db40e293c9e21f96c" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
