--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
                     </div>
                     <h3>Scientific Calculator</h3>
                     <p>Advanced calculator with scientific functions, graphs and constants</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="scientific.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
@@ -1137,7 +1137,7 @@
                     </div>
                     <h3>Currency Converter</h3>
                     <p>Convert between world currencies with live exchange rates</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="currency-convert.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
