--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
                     </div>
                     <h3>Age Calculator</h3>
                     <p>Calculate age from birth date to current date with years, months and days</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="age-convert.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
