--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
                     </div>
                     <h3>Scientific Calculator</h3>
                     <p>Advanced calculator with scientific functions, graphs and constants</p>
-                    <a href="scientific.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="Scientific.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
