--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
                     </div>
                     <h3>BMI Calculator</h3>
                     <p>Calculate your Body Mass Index and get health recommendations</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="bmi-calculator.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
