--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,7 @@
                     </div>
                     <h3>Word & Character Counter</h3>
                     <p>Count words, characters, sentences, paragraphs and reading time</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="cheracter-count.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
