--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
                     </div>
                     <h3>Text Case Converter</h3>
                     <p>Change text between uppercase, lowercase, title case and more</p>
-                    <a href="text-case-converter.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="text-convert.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
