--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
                     </div>
                     <h3>Remove Duplicate Lines</h3>
                     <p>Clean up text by removing duplicate lines while preserving order</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="textline-remove.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
