--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,7 @@
                     </div>
                     <h3>Text Sorter</h3>
                     <p>Sort lines of text alphabetically, numerically or by length</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="text-sorter.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
