--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
                     </div>
                     <h3>HTML/CSS/JS Minifier</h3>
                     <p>Minify your code to reduce file size and improve website performance</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="html-minifier.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
