--- a/index.html
+++ b/index.html
@@ -1422,7 +1422,7 @@
                     </div>
                     <h3>QR Code Generator & Scanner</h3>
                     <p>Create and scan QR codes for URLs, text, contacts and more</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="qrcode.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
