--- a/index.html
+++ b/index.html
@@ -1467,7 +1467,7 @@
                     </div>
                     <h3>Random Number/Password Generator</h3>
                     <p>Generate secure random numbers and passwords with custom rules</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="random-name.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
