--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,7 @@
                     </div>
                     <h3>Barcode Generator</h3>
                     <p>Generate barcodes in various formats for products and inventory</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="barcode.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
