--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
                     </div>
                     <h3>Color Picker from Image</h3>
                     <p>Extract color palettes from any uploaded image with precision</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="color-picker.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
