--- a/index.html
+++ b/index.html
@@ -1326,7 +1326,7 @@
                     </div>
                     <h3>Palette Generator</h3>
                     <p>Generate harmonious color palettes for your design projects</p>
-                    <a href="#" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
+                    <a href="color-generate.html" class="tool-button">Use Tool <i class="fas fa-arrow-right"></i></a>
                 </div>
                 
                 <div class="tool-card">
