--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viral Tools - Advanced Tools for Modern Needs</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Title (SEO Friendly) -->
+  <title>Viral Tools - Free Online Tools | PDF, QR Code, Image & More</title>
+
+  <!-- Meta Description (Max ~160 chars) -->
+  <meta name="description" content="Viral Tools offers free online tools like PDF converter, QR code generator, image compressor, BMI calculator, currency converter and more. Fast & secure.">
+
+  <!-- Meta Keywords (not much used by Google but helpful for Bing/Yahoo) -->
+  <meta name="keywords" content="free online tools, pdf converter, qr code generator, image compressor, bmi calculator, currency converter, text tools">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://viraltools.site/">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Viral Tools - Free Online Tools">
+  <meta property="og:description" content="Use free PDF converter, QR code generator, image compressor, BMI calculator, and more at Viral Tools. 100% free online tools.">
+  <meta property="og:url" content="https://viraltools.site/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://viraltools.site/logo.png">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Viral Tools - Free Online Tools">
+  <meta name="twitter:description" content="Free online PDF converter, QR code generator, image tools & more at Viral Tools.">
+  <meta name="twitter:image" content="https://viraltools.site/logo.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png">
+
+  <!-- Styles & Fonts -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+</head>
+
     <style>
         :root {
             --primary: #6366f1;
