--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta name="twitter:image" content="https://viraltools.site/logo.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/png" href="/logo.png">
 
   <!-- Styles & Fonts -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
