--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <header style="display:flex; align-items:center; gap:10px; padding:10px;">
+  <img src="logo.png" alt="Website Logo" style="height:40px;">
   <!-- Title (SEO Friendly) -->
   <title>Viral Tools - Free Online Tools | PDF, QR Code, Image & More</title>
 
