--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
             
             <div class="contact-email">
                 <i class="fas fa-envelope"></i>
-                <span>contact@viraltools.com</span>
+                <span>contact@viraltools.site</span>
             </div>
             
             <button class="mobile-menu-btn" id="menuToggle">
