--- a/trialsubmited.html
+++ b/trialsubmited.html
@@ -95,7 +95,7 @@
                         <div class="flex justify-center">
                             <!-- CRITICAL: Is jagah par aapko apni 'design_post.png' file ka direct Raw GitHub URL paste karna hai. Agar URL sahi hoga toh image show ho jayegi. -->
                             <img 
-                                src="https://placehold.co/400x400/1e3a8a/ffffff?text=PASTE+GITHUB+URL+HERE" 
+                                src="https://viraltools.site/design_post.png" 
                                 alt="Instagram post design (design_post.png)" 
                                 class="rounded-lg shadow-xl max-w-xs w-full"
                                 onerror="this.onerror=null; this.src='https://placehold.co/400x400/1e3a8a/ffffff?text=IMAGE+URL+NEEDED';"
